# CiteIQ

./: README.md  pyproject.toml
docs/: cli_spec.md
src/citeiq/: __init__.py  cli.py  clustering.py  external.py  ingest.py  models.py  normalize.py  pipeline.py  report.py  scoring.py
src/citeiq.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_scoring.py
